[package]
name = "Crypt"
version = "1.0.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rand_core = { version = "0.6", features = ["getrandom"] }
walkdir = "2.5.0"
tar = "0.4.46"
zeroize = "1"
zstd = { version = "0.13", features = ["experimental", "zstdmt"] }
num_cpus = "1"
os_pipe = "1.2"
crossbeam-channel = "0.5"
termios = "0.3.3"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
